mux-compiler/tests/snapshots/executable_integration__executable_integration__lexer_invalid_char.snap
---
source: mux-compiler/tests/executable_integration.rs
expression: output_to_snapshot
---
error: unexpected character: 'ยง'
--> /home/derekcorn/code/mux-lang/test_scripts/error_cases/lexer_invalid_char.mux:2:1
   |
 2 | ยง
   | ^
